Fix bug where podcast host image was expanding on mobile devices

--- a/styles/podcast.less
+++ b/styles/podcast.less
@@ -369,6 +369,7 @@
 
     img.hosts-image {
       margin-bottom: 1em;
+      width: 100%;
 
       @media @tablet-desktop {
         float: left;
